# music-processing

./: GenerateSamples.hs  Grains.hs  GranSynth.hs  GranularSynthesis.hs  Main.hs  OpenALExample.hs  PlaySine.hs  TestGrains.hs  fltkhs-hello-world.cabal  libsndfileExamples.hs  proteaaudioExample.hs  sine.hs  slider-project.cabal  slider.hs
fft-processing/: FFTProcessing.hs  FFTProcessing.lhs  PlaySine.hs  Plotting.hs  README.md  StreamProcessing.lhs  fft-processing.cabal  stack.yaml
granular-synthesis/: Grains.hs  GranularSynthesis.hs  PlaySine.hs  README.md
slider-project/: PlaySine.hs  README.md  slider-project.cabal
