name : fft-processing
version : 0.0.0.1
synopsis : Fltkhs project doing fft processing
description:
    Fltkhs project doing fft processing
license : MIT
license-file : LICENSE
author : Tanya Bouman
build-type: Custom
maintainer: boumante@mcmaster.ca
homepage: http://github.com/tanyabouman/music-processing
category: UI,Graphics
cabal-version: >=2.0
source-repository head
  type: git
  location: http://github.com/tanyabouman/music-processing

custom-setup
  setup-depends:
      Cabal >=2.2.0.0 && <3
    , base >=4.4
    , filepath

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

Executable fft-processing
  Main-Is: FFTProcessing.lhs
  Hs-Source-Dirs: .
  other-modules:
    PlaySine
  Build-Depends:
    base == 4.*,
    fltkhs >= 0.6.0.0,
    text >= 1.2.2.0,
    alsa-pcm,
    carray,
    pure-fft,
    Chart-cairo,
    Chart,
    hsndfile,
    array,
    storablevector
  default-language: Haskell2010
  ghc-Options: -Werror -threaded
  if impl(ghc >= 7.10) && impl(ghc < 8.0) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  else
     ghc-Options:
  if os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
